@@ -168,3 +168,5 @@
 	tree in 'Makefile.am'.
 2014-09-22 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to 0.9.7.
+2014-09-23 Fred Gleason <fredg@paravelsystems.com>
+	* Added code to update the GTK icon cache in 'aman.spec.in'.
